ubiquity (2.11.18) UNRELEASED; urgency=low

  * Don't bother keeping track of keyboard model names and identifiers, as
    nothing in ubiquity uses them right now.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 23 Jul 2012 10:13:17 +0100

ubiquity (2.11.17) quantal; urgency=low

  * ubiquity/plugins/ubi-partman.py: Remove a stray comma, which broke this
    plugin.
  * Parse a compact representation of keyboard layouts and variants on the
    fly, rather than building them all into a giant static Python module.
    This is much more memory-efficient.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 19 Jul 2012 11:09:16 +0100

ubiquity (2.11.16) quantal; urgency=low

  [ Dmitrijs Ledkovs ]
  * Add experimental auto-lvm recipe
  * Automatic update of included source packages: partman-auto-lvm
    44ubuntu1.
  * Update translation templates.

  [ Colin Watson ]
  * Add a --no-webcam option to disable the webcam page.
  * Make all Python code pass pep8(1), and add a test to enforce this.
  * Automatic update of included source packages: flash-kernel
    3.0~rc.4ubuntu7, partman-lvm 79ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 18 Jul 2012 15:47:16 +0100

ubiquity (2.11.15) quantal; urgency=low

  * Drop hw-detect debugging attempts.
  * Terminate status-to-debconf subprocess in DebconfInstallProgress more
    gracefully to avoid desynchronising the debconf protocol if the
    subprocess is killed between sending a command and receiving the
    response (LP: #1023036).
  * Make user-setup-encrypted-swap wait until partitioning has finished
    before attempting to adjust /target/etc/fstab (LP: #1024343).
  * Don't try and fail to set up encrypted swap if no swap partitions are
    configured (LP: #989279).

 -- Colin Watson <cjwatson@ubuntu.com>  Sat, 14 Jul 2012 00:17:31 +0100

ubiquity (2.11.14) quantal; urgency=low

  * compat/udpkg: Handle 'udpkg -c' from udpkg 1.14, required by hw-detect
    1.89.