@@ -2,6 +2,9 @@ ubiquity (2.11.18) UNRELEASED; urgency=low
 
   * Don't bother keeping track of keyboard model names and identifiers, as
     nothing in ubiquity uses them right now.
+  * Fix reversed uses of methods mapping between keyboard layout/variant IDs
+    and human-readable names, and improve method naming and documentation to
+    make this mistake less likely in future (LP: #1027620).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 23 Jul 2012 10:13:17 +0100
 
